<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_frame"
    tools:context=".RegistrationActivity">

    <!-- Верхняя панель -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_back_arrow"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_title"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/jura_regular"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Форма -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="95dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <!-- Имя -->
            <LinearLayout
                style="@style/Row"
                android:layout_marginTop="8dp">
                <TextView
                    style="@style/LabelText"
                    android:text="@string/label_name"
                    android:fontFamily="@font/jura_regular"
                    android:background="@drawable/bg_label"
                    android:textSize="22dp"
                    android:padding="6sp"/>
                <EditText
                    android:id="@+id/etName"
                    style="@style/Input"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <!-- Фамилия -->
            <LinearLayout style="@style/Row">
                <TextView
                    style="@style/LabelText"
                    android:text="@string/label_surname"
                    android:background="@drawable/bg_label"
                    android:textSize="22sp"
                    android:fontFamily="@font/jura_regular"
                    android:padding="6dp"/>
                <EditText
                    android:id="@+id/etSurname"
                    style="@style/Input"
                    android:layout_marginStart="8dp"
                    android:hint="@string/hint_surname"
                    android:layout_marginTop="5dp"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <!-- Телефон -->
            <LinearLayout style="@style/Row">
                <TextView
                    style="@style/LabelText"
                    android:text="@string/label_phone"
                    android:background="@drawable/bg_label"
                    android:textSize="22sp"
                    android:fontFamily="@font/jura_regular"
                    android:padding="6dp"/>
                <EditText
                    android:id="@+id/etPhone"
                    style="@style/Input"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"/>
            </LinearLayout>

            <!-- Пароль -->
            <LinearLayout style="@style/Row">
                <TextView
                    style="@style/LabelText"
                    android:text="Пароль:"
                    android:background="@drawable/bg_label"
                    android:textSize="22sp"
                    android:fontFamily="@font/jura_regular"
                    android:padding="6dp"/>
                <EditText
                    android:id="@+id/etPassword"
                    style="@style/Input"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="Введите пароль"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <!-- Адрес -->
            <LinearLayout style="@style/Row">
                <TextView
                    style="@style/LabelText"
                    android:text="@string/label_address"
                    android:background="@drawable/bg_label"
                    android:textSize="22sp"
                    android:fontFamily="@font/jura_regular"
                    android:padding="6dp"/>
                <EditText
                    android:id="@+id/etAddress"
                    style="@style/Input"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_address"
                    android:inputType="textPostalAddress"/>
            </LinearLayout>

            <!-- Чекбоксы -->
            <CheckBox
                android:id="@+id/cbPolicy"
                style="@style/CheckRow"
                android:text="@string/agree_policy"/>
            <CheckBox
                android:id="@+id/cbNews"
                style="@style/CheckRow"
                android:layout_marginTop="4dp"
                android:text="@string/subscribe_news"/>

            <!-- Кнопка -->
            <Button
                android:id="@+id/btnRegister"
                style="@style/GreenButton"
                android:layout_marginTop="5dp"
                android:text="@string/btn_register"
                android:textColor="#000"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
